force-app/main/default/objects/SSP_ResourceOwnership__c/SSP_ResourceOwnership__c.object-meta.xml
<CustomObject>
    <description>Stores information about resource ownerhsip such as JointOwnership, TrustBeneficiary, TrustGrantor.</description>
    <label>SSP ResourceOwnership</label>
    <nameField>
        
        <displayFormat>RO-{0000000000}</displayFormat>
        
        <label>SSP_ResourceOwnership Name</label>
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>SSP ResourceOwnerships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>