force-app/main/default/objects/SSP_ResourceOwnership__c/fields/DCId__c.field-meta.xml
<CustomField>
    <fullName>DCId__c</fullName>
    <description>This field is used to identify a unique Resource ownership record for an External System</description>
    <externalId>true</externalId>
    <label>DCId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>