force-app/main/default/objects/SSP_ResourceOwnership__c/fields/DCResourceOwnershipDetailId__c.field-meta.xml
<CustomField>
    <fullName>DCResourceOwnershipDetailId__c</fullName>
    <description>This field is used to identify a unique record for an external system</description>
    <label>DCResourceOwnershipDetailId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>