force-app/main/default/objects/SSP_ResourceOwnership__c/fields/JointOwnerName__c.field-meta.xml
<CustomField>
    <fullName>JointOwnerName__c</fullName>
    <description>This field is used to store Joint Owner Name for a Resource ownership if the Owner is outside of household</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Joint Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>