force-app/main/default/objects/SSP_ResourceOwnership__c/fields/SSP_Asset__c.field-meta.xml
<CustomField>
    <fullName>SSP_Asset__c</fullName>
    <description>This field is used to indicate the related asset for a Resource Ownership</description>
    <label>SSP_Asset</label>
    <referenceTo>SSP_Asset__c</referenceTo>
    <relationshipName>SSP_ResourceOwnerships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>