force-app/main/default/objects/SSP_ResourceOwnership__c/recordTypes/JointOwnership.recordType-meta.xml
<RecordType>
    <fullName>JointOwnership</fullName>
    <active>true</active>
    <description>Recordtype used for Joint Ownership of Resource</description>
    <label>JointOwnership</label>
</RecordType>